--- a/frontend/src/Components/AddRefferal/index.module.css
+++ b/frontend/src/Components/AddRefferal/index.module.css
@@ -12,6 +12,12 @@
   width: 100%;
   max-width: 400px;
 }
+.formContainer .successMessage {
+  font-size: medium;
+  color: green;
+  display: flex;
+  flex-wrap: wrap;
+}
 
 .inputGroup {
   display: flex;
@@ -52,6 +58,11 @@
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
+}
+@media (max-width: 550px) {
+  .submitButton {
+    font-size: 0.5rem;
+  }
 }
 
 .submitButton:hover {
