--- a/frontend/src/Components/AddRefferal/index.module.scss
+++ b/frontend/src/Components/AddRefferal/index.module.scss
@@ -1,3 +1,5 @@
+@import "../../StyleHelpers/Variables.scss";
+
 .container {
     display: flex;
     justify-content: center;
@@ -13,6 +15,14 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
+
+    .successMessage{
+      font-size: medium;
+      color: green;
+      display: flex;
+      flex-wrap: wrap;
+      
+    }
   }
   
   .inputGroup {
@@ -50,6 +60,10 @@
     font-size: 1rem;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
+
+    @include breakpoint (md){
+      font-size: 0.5rem;
+    }
   }
   
   .submitButton:hover {
