--- a/frontend/src/Pages/User/RefferalPage/index.module.scss
+++ b/frontend/src/Pages/User/RefferalPage/index.module.scss
@@ -51,6 +51,11 @@
   font-weight: normal;
   position: relative;
   transition: color 0.3s ease, font-weight 0.3s ease;
+
+  @include breakpoint(md){
+    padding: 14px 13px;
+    font-size: 17px;
+  }
   
   &:hover {
     color: #007bff; /* Hover color */
